--- a/Views/Admin/Edit.cshtml
+++ b/Views/Admin/Edit.cshtml
@@ -75,7 +75,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="HistoriaClinica" class="control-label"></label>
-                <textarea asp-for="Estado2" class="form-control" cols="30" rows="10"></textarea>
+                <textarea asp-for="HistoriaClinica" class="form-control" cols="30" rows="10"></textarea>
                 <span asp-validation-for="HistoriaClinica" class="text-danger"></span>
             </div>
             <div class="form-group">
