--- a/Views/Admin/Details.cshtml
+++ b/Views/Admin/Details.cshtml
@@ -365,4 +365,6 @@
 <div>
     <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Modificar</a> |
     <a class="btn btn-primary" asp-action="Index">Regresar a la lista</a>
+    <a asp-action="ExportPdf" asp-route-id="@Model.Id" class="btn btn-primary">Exportar a PDF</a>
+
 </div>
