--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="~/css/Estilos.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -18,13 +20,17 @@
                 <a class="navbar-brand" href="#" id="logoLink">
                     <img src="/images/logo.jpeg" alt="" height="50" width="320">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <!-- Aquí van los elementos de navegación -->
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Temporizador"
+                                asp-action="Index">Temporizador</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -55,36 +61,36 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <script>
-    document.getElementById("logoLink").addEventListener("click", function(event) {
-        event.preventDefault(); // Prevenir el comportamiento por defecto de la etiqueta <a>
-        console.log("Logo clicked!");  // Verificar si el evento se está disparando correctamente
-        
-        // Obtener los roles del usuario desde ViewData
-        var userRoles = @Html.Raw(Json.Serialize(ViewData["UserRoles"]));
+        document.getElementById("logoLink").addEventListener("click", function (event) {
+            event.preventDefault(); // Prevenir el comportamiento por defecto de la etiqueta <a>
+            console.log("Logo clicked!");  // Verificar si el evento se está disparando correctamente
 
-        console.log("User Roles: ", userRoles);  // Verificar los roles obtenidos
-        
-        // Redirigir según el rol
-        if (userRoles.includes("Admin")) {
-            console.log("Redirecting to Admin/Index");
-            window.location.href = "/Admin/Index"; // Redirige a Admin/Index
-        } else if (userRoles.includes("User")) {
-            console.log("Redirecting to Formulario/Index2");
-            window.location.href = "/Formulario/Index2"; // Redirige a Formulario/Index2
-        } else {
-            console.log("Redirecting to Home/Index");
-            window.location.href = "/Home/Index"; // Redirige a Home/Index si no tiene un rol específico
-        }
-    });
-</script>
-<script>
+            // Obtener los roles del usuario desde ViewData
+            var userRoles = @Html.Raw(Json.Serialize(ViewData["UserRoles"]));
+
+            console.log("User Roles: ", userRoles);  // Verificar los roles obtenidos
+
+            // Redirigir según el rol
+            if (userRoles.includes("Admin")) {
+                console.log("Redirecting to Admin/Index");
+                window.location.href = "/Admin/Index"; // Redirige a Admin/Index
+            } else if (userRoles.includes("User")) {
+                console.log("Redirecting to Formulario/Index2");
+                window.location.href = "/Formulario/Index2"; // Redirige a Formulario/Index2
+            } else {
+                console.log("Redirecting to Home/Index");
+                window.location.href = "/Home/Index"; // Redirige a Home/Index si no tiene un rol específico
+            }
+        });
+    </script>
+    <script>
         // Función para mostrar el mensaje flotante
         function showToast(message) {
             var toast = document.getElementById("toastMessage");
             var toastContent = toast.querySelector("p");
             toastContent.innerHTML = message;
             toast.style.display = "block";
-            setTimeout(function() {
+            setTimeout(function () {
                 toast.style.display = "none";
             }, 3000); // Mostrar por 3 segundos
         }
@@ -101,4 +107,5 @@
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
