--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Temporizador"
                                 asp-action="Index">Temporizador</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="File"
+                                asp-action="Index">EnviarPDF</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
