--- a/Views/Admin/Details.cshtml
+++ b/Views/Admin/Details.cshtml
@@ -235,5 +235,7 @@
 <div>
     <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Modificar</a> |
     <a class="btn btn-primary" asp-action="Index">Regresar a la lista</a> |
-    <a asp-action="ExportPdf" asp-route-id="@Model.Id" class="btn btn-primary">Exportar a PDF</a>
+    <a asp-controller="PdfDownload" asp-action="ExportPdf" asp-route-id="@Model.Id" class="btn btn-primary" target="_blank">
+        Descargar PDF
+    </a>
 </div>
