Arreglos en el tercer estado y agregación de tercer imagen

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -18,7 +18,7 @@
         @if (roles.Contains("User") || roles.Contains("Operador"))
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Formulario" asp-action="Index2">Registrar caso</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Formulario" asp-action="Index2">Casos</a>
             </li>
         }
         
