--- a/Views/Formulario/Index2.cshtml
+++ b/Views/Formulario/Index2.cshtml
@@ -9,7 +9,7 @@
         </div>
 
         <p>
-            <a class="btn btn-primary" asp-action="Create">Crear nuevo</a>
+            <a class="btn btn-primary" asp-action="Create">Crear caso</a>
         </p>
         <table class="table">
             <thead>
