--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -28,9 +28,7 @@
                     <td class="text-right d-flex justify-content-end"> <!-- Flexbox para alineación -->
                         <a class="btn btn-primary mx-1" asp-action="Edit" asp-route-id="@item.Id">Modificar</a>
                         <a class="btn btn-success mx-1" asp-action="Details" asp-route-id="@item.Id">Detalles</a>
-                        <a asp-controller="PdfDownload" asp-action="ExportPdf" asp-route-id="@item.Id" class="btn btn-info mx-1" target="_blank">
-                        Descargar PDF
-                        </a>
+                        <a asp-controller="PdfDownload" asp-action="ExportPdf" asp-route-id="@item.Id" class="btn btn-primary mx-1">Exportar a PDF</a>
                         <a class="btn btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
                         
                     </td>
