--- a/Views/Formulario/Details.cshtml
+++ b/Views/Formulario/Details.cshtml
@@ -203,7 +203,7 @@
 
    <dt class="col-12">Texto extraído</dt>
 <dd class="col-12">
-    @Html.Raw(Model.ArchivoTextoExtraido.Replace("\r\n", "<br />").Replace("\n", "<br />"))
+    @Html.Raw((Model.ArchivoTextoExtraido != null) ? Model.ArchivoTextoExtraido.Replace("\r\n", "<br />").Replace("\n", "<br />") : "")
 </dd>
 
 
@@ -231,9 +231,9 @@
         }
 
 </div>
-
-<div>
-    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Modificar</a> |
-    <a class="btn btn-primary" asp-action="Index">Regresar a la lista</a> |
-    <a asp-action="ExportPdf" asp-route-id="@Model.Id" class="btn btn-primary">Exportar a PDF</a>
+<hr>
+<div class="text-right d-flex justify-content-end">
+    <a class="btn btn-primary mx-1" asp-action="Edit" asp-route-id="@Model?.Id">Modificar</a> 
+    <a class="btn btn-primary mx-1" asp-action="Index2">Regresar a la lista</a> 
+    <a asp-controller="PdfDownload" asp-action="ExportPdf" asp-route-id="@Model.Id" class="btn btn-primary mx-1">Exportar a PDF</a>
 </div>
