--- a/Views/Formulario/Edit.cshtml
+++ b/Views/Formulario/Edit.cshtml
@@ -504,16 +504,13 @@
             <div class="preview-area" id="previewAreaImages">
                 <div class="file-info" id="fileInfoImages"></div>
             </div>
-
-            <div class="form-group">
-                <input type="submit" value="Guardar Cambios" class="btn btn-primary" />
+            <hr>
+            <div class="text-right d-flex justify-content-end">
+                <input type="submit" value="Guardar Cambios" class="btn btn-success mx-1" /> 
+                <a class="btn btn-primary mx-1" asp-action="Index2">Regresar a la lista</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
