--- a/Views/Admin/Delete.cshtml
+++ b/Views/Admin/Delete.cshtml
@@ -11,24 +11,24 @@
     <h4>Formulario</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-12">
+        <dt class="col-12">
             @Html.DisplayNameFor(model => model.Titulo)
         </dt>
-        <dd class = "col-12">
+        <dd class="col-12">
             @Html.DisplayFor(model => model.Titulo)
         </dd>
-        <dt class = "col-12">
+        <dt class="col-12">
             @Html.DisplayNameFor(model => model.Sinopsis)
         </dt>
-        <dd class = "col-12">
+        <dd class="col-12">
             @Html.DisplayFor(model => model.Sinopsis)
         </dd>
-        
-        </dl>
-    
+
+    </dl>
+
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="hidden" asp-for="Id" /> 
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            <a class="btn btn-primary mx-1" asp-action="Index">Back to List</a>       
     </form>
 </div>
